--- a/style.css
+++ b/style.css
@@ -103,3 +103,32 @@ body{
   background-color: #009688;
   color: #fff;
 }
+
+@media screen and (max-width: 768px){
+.slider-container {
+    max-width: 600px;
+    width: 100%;
+}
+
+.slider-container img {
+    max-width: 100%;
+    height: 80%;
+    transition: opacity 1s;
+}
+
+.slider-controls {
+    max-width: 350px;
+    display: flex;
+    justify-content: space-between;
+}
+
+}
+
+@media screen and (max-width: 448px) {
+  .slider-container img {
+    max-width: 100%;
+    height:50%;
+    transition: opacity 1s;
+  }
+
+}
